--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,23 +2,28 @@
   box-sizing: border-box;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 img {
   display: block;
-  margin-right: 15px;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-  font-size: 18px;
-}
-
-span {
-  font-weight: 700;
-  margin-right: 8px;
+  width: 100%;
+  object-fit: cover;
+  height: 240px;
 }
 
 body {
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -28,16 +33,88 @@ body {
   line-height: 1.5;
 }
 
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+.search-form {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(77, 77, 220);
+  padding: 6px 0;
 }
 
-.country-list li,
-h1 {
+.search-form input {
+  display: block;
+  padding: 0 5px;
+  border: 0;
+  border-radius: 4px 0 0 4px;
+  height: 30px;
+  width: 250px;
+  outline: none;
+}
+
+.search-form input:hover,
+.search-form input:focus {
+  background-color: rgb(240, 240, 240);
+}
+
+.search-form button {
+  display: block;
+  height: 30px;
+  padding: 0 5px;
+  border: 0;
+  border-radius: 0 4px 4px 0;
+  outline: none;
+}
+
+.search-form button:hover,
+.search-form button:focus {
+  background-color: #ccc;
+}
+
+.container {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+  text-align: center;
+}
+
+.gallery {
   display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.photo-card {
+  width: calc((100% - 45px) / 4);
+  box-shadow: 0px 3px 5px #999;
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.load-more {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  border: none;
+  border-radius: 4px;
+  height: 30px;
+  width: 100px;
+  background-color: rgb(77, 77, 220);
+  cursor: pointer;
+  box-shadow: 0px 3px 5px #999;
+}
+
+.load-more:hover,
+.load-more:focus {
+  box-shadow: 0px 3px 4px #666;
 }
