--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,6 +109,7 @@ body {
   border-radius: 4px;
   height: 30px;
   width: 100px;
+  color: #fafafa;
   background-color: rgb(77, 77, 220);
   cursor: pointer;
   box-shadow: 0px 3px 5px #999;
